--- a/vars/vars.yml
+++ b/vars/vars.yml
@@ -1,9 +1,9 @@
 
 # LDAP Configuration
 
-ldap_org_name: 'moyer'
+ldap_org_name: 'HiveMind'
 ldap_domain: 'internal.moyer.wtf'
-ldap_base_dn: 'dc=moyer,dc=wtf'
+ldap_base_dn: 'dc=internal,dc=moyer,dc=wtf'
 ldap_admin_cn: 'cn=admin'
 ldap_uri: 'ldap://auth.internal.moyer.wtf'
 ldap_users_ou: 'ou=users'
@@ -24,3 +24,10 @@ tailscale_args: "--operator=tmoyer_l"
 
 ldap_lxd_group: lxdusers
 
+# Smallstep CA
+
+ca_container_image: smallstep/step-ca
+ca_container_name: step_ca
+ca_listen_port: 9000
+ca_dns_names: 'lcaolhost,auth.internal.moyer.wtf'
+ca_name: 'HiveMind CA'
