--- a/roles/auth-server/meta/main.yml
+++ b/roles/auth-server/meta/main.yml
@@ -49,5 +49,6 @@ galaxy_info:
 
 dependencies:
 - { role: docker-host }
+- { role: smallstep.cli.install }
   # List your role dependencies here, one per line. Be sure to remove the '[]' above,
   # if you add dependencies to this list.
