--- a/roles/auth-server/tasks/main.yml
+++ b/roles/auth-server/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-# tasks file for ldap-server
+# tasks file for auth-server
 
 - name: Install packages
   ansible.builtin.package:
@@ -223,30 +223,32 @@
 - name: Create password file
   ansible.builtin.shell: echo -n {{ ldap_admin_password }} > /etc/ldapscripts/ldapscripts.passwd
 
-# - name: Copy certinfo.ldif to server
-#   ansible.builtin.copy:
-#     src: certinfo.ldif
-#     dest: /root/certinfo.ldif
-
-# - name: Add certinfo.ldif to LDAP configuration
-#   ansible.builtin.command: ldapmodify -Y EXTERNAL -H ldapi:/// -f /root/certinfo.ldif
-
-# - name: Clean up files
-#   ansible.builtin.file:
-#     path: /root/certinfo.ldif
-#     state: absent
-
-# - name: Ensure ldaps is enabled
-#   ansible.builtin.lineinfile:
-#     path: /etc/default/slapd
-#     state: present
-#     regexp: '^SLAPD_SERVICES'
-#     line: 'SLAPD_SERVICES="ldap:/// ldapi:/// ldaps:///"'
-
 - name: Restart slapd
   ansible.builtin.systemd_service:
     name: slapd
     state: restarted
+
+- name: Create base config directory
+  ansible.builtin.file:
+    path: /etc/systemd/system/docker.service.d/
+    state: directory
+    owner: root
+    group: root
+    mode: 0644
+
+- name: Setup docker for remote connections
+  ansible.builtin.template:
+    src: docker-override.conf.j2
+    dest: /etc/systemd/system/docker.service.d/override.conf
+    owner: root
+    group: root
+    mode: 0644
+
+- name: Restart docker
+  ansible.builtin.systemd_service:
+    state: restarted
+    daemon_reload: true
+    name: docker
 
 - name: Pull default Docker image
   community.docker.docker_image:
@@ -266,3 +268,7 @@
     volumes:
       - step:/home/step
     state: started
+
+- name: Bootstrap CA
+  ansible.builtin.include_role:
+    name: ca-client
